# gpstitch-mod

./: .gitignore  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES.md  pyproject.toml
openspec/changes/localize-ui-and-render-workflows/: design.md  proposal.md  tasks.md
src/gpstitch/: __init__.py  app.py  config.py  constants.py  main.py
src/gpstitch/api/: __init__.py  command.py  editor.py  layouts.py  local.py  map_cache.py  options.py  preview.py  render.py  settings.py  templates.py  time_sync.py  upload.py
src/gpstitch/layouts/: dji-drone-1920x1080.xml  dji-drone-2720x1530.xml  dji-drone-3840x2160.xml  dji-drone-5120x2700.xml
src/gpstitch/models/: __init__.py  editor.py  job.py  schemas.py
src/gpstitch/patches/: __init__.py  amap_render_patches.py  ffmpeg_gopro_patches.py  ffmpeg_overlay_patches.py  ffmpeg_profile_patches.py  gpx_encoding_patches.py  gpx_patches.py  layout_datetime_patches.py  layout_encoding_patches.py  map_cache_patches.py  metric_patches.py  odo_patches.py  xml_encoding.py
src/gpstitch/scripts/: __init__.py  gopro_dashboard_wrapper.py
src/gpstitch/services/: __init__.py  amap_jsapi_renderer.py  amap_settings.py  dji_meta_parser.py  file_manager.py  gps_analyzer.py  job_manager.py  localization.py  map_cache.py  metadata.py  power.py  render_service.py  renderer.py  runtime_settings.py  srt_parser.py  template_service.py  widget_registry.py  xml_converter.py
src/gpstitch/static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py
tests/api/: conftest.py  test_amap_settings.py  test_batch_render.py  test_editor.py  test_local.py  test_map_cache.py  test_preview.py  test_render.py  test_templates.py  test_time_sync.py  test_upload.py
tests/e2e/: __init__.py  conftest.py  test_advanced_mode.py  test_amap_jsapi.py  test_batch_render.py  test_cairo_layout_render.py  test_localization_and_pickers.py  test_quick_mode.py  test_render_pipeline.py  test_smoke.py  test_time_sync.py
tests/fixtures/: data.py  factories.py
tests/fixtures/videos/: IMG_2927.MOV  IMG_2927_tz_overlap_test.MOV  IMG_2927_tz_test.MOV  hiking_activity.gpx  long_gps_track_tz_test.gpx
tests/integration/: conftest.py  test_dji_meta_gps_quality.py  test_dji_meta_parser.py  test_dji_meta_preview.py  test_dji_meta_render.py  test_dji_srt.py  test_metadata.py  test_metadata_preservation.py  test_render_service.py  test_renderer.py  test_tz_correction.py
tests/unit/: __init__.py  test_config.py  test_entrypoint.py  test_job_manager.py  test_metadata.py  test_time_sync.py  test_upload_dji_meta.py
tests/unit/models/: test_migration.py  test_time_alignment_models.py
tests/unit/patches/: __init__.py  test_dji_meta_patches.py  test_ffmpeg_profile_patches.py  test_gpx_encoding_patches.py  test_gpx_patches.py  test_layout_datetime_patches.py  test_layout_encoding_patches.py  test_library_contract.py  test_map_cache_patches.py  test_odo_patches.py  test_patches.py
tests/unit/services/: test_amap_jsapi_renderer.py  test_amap_preview_layout.py  test_amap_settings.py  test_default_osd_layout.py  test_dji_meta_parser.py  (+13 more)
(+40 files in other folders)
